--- a/jrocks-springular/springular-frontend/package.json
+++ b/jrocks-springular/springular-frontend/package.json
@@ -34,7 +34,7 @@
     "bootstrap": "^4.1.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.10.0",
+    "@angular-devkit/build-angular": "^0.12.1",
     "@angular-devkit/core": "^7.0.5",
     "@angular/cli": "^7.0.5",
     "@angular/compiler-cli": "7.0.3",
